--- a/bot/admin/web/src/app/bot/story/story.component.css
+++ b/bot/admin/web/src/app/bot/story/story.component.css
@@ -42,4 +42,11 @@
   margin-top: 10px;
 }
 
+.answer-title-right-panel {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 100px;
+}
+
 
