fixes #493 bot flow: select "all" select all stats - other configuration names included
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/test/plan/test-plan.component.html
+++ b/bot/admin/web/src/app/test/plan/test-plan.component.html
@@ -21,7 +21,7 @@
 <mat-card *ngIf="xray">
   <mat-card-title>Execute XRay plan</mat-card-title>
   <tock-select-bot [(configurationId)]="xrayBotConfigurationId"
-                   (configurationIdChange)="xrayBotConfigurationId=$event"
+                   (configurationIdChange)="xrayBotConfigurationId=$event ? $event.configurationId : undefined"
                     [allowNoSelection]="true"></tock-select-bot>
 
     <mat-form-field class="input-text">
