bot admin: improve configuration change handling
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/flow/flow.component.html
+++ b/bot/admin/web/src/app/bot/flow/flow.component.html
@@ -25,7 +25,7 @@
   </mat-expansion-panel-header>
   <tock-select-bot [(configurationId)]="botConfigurationId" [displayConnectorChoice]="true"
                    [allowNoConfigurationSelection]="true" [useRestConfiguration]="false"
-                   (configurationIdChange)="displayFlow($event)" class="select">
+                   (selectionChange)="displayFlow($event)" class="select">
   </tock-select-bot>
   <mat-form-field class="select">
     <mat-label>Story Focus</mat-label>
