resolves #494 bot admin: allow to disable kotlin compiler
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/story/answer.component.html
+++ b/bot/admin/web/src/app/bot/story/answer.component.html
@@ -10,7 +10,7 @@
       <label id="answer-type-label">Type:</label>
       <mat-radio-group aria-labelledby="answer-type-label" [(ngModel)]="answer.currentType" (change)="changeType($event)">
         <mat-radio-button [value]="0" class="answer-type">Simple</mat-radio-button>
-        <mat-radio-button [value]="2" class="answer-type">Script</mat-radio-button>
+        <mat-radio-button *ngIf="shared.compilerAvailable" [value]="2" class="answer-type">Script</mat-radio-button>
       </mat-radio-group>
     </div>
 
