--- a/bot/admin/web/src/app/bot/flow/flow.component.css
+++ b/bot/admin/web/src/app/bot/flow/flow.component.css
@@ -55,3 +55,11 @@ tock-cytoscape {
   overflow-x: hidden;
   margin-top: 10px;
 }
+
+.description {
+  padding-right: 100px;
+}
+
+.mode-selection {
+  margin-top: -3px;
+}
