--- a/bot/admin/web/src/app/configuration/bot/bot-configurations.component.css
+++ b/bot/admin/web/src/app/configuration/bot/bot-configurations.component.css
@@ -13,3 +13,8 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
+.configuration-input {
+  min-width: 280px;
+  padding-right: 20px;
+}
