resolves #501 first version of Bot API
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/configuration/bot/bot-configurations.component.css
+++ b/bot/admin/web/src/app/configuration/bot/bot-configurations.component.css
@@ -16,5 +16,23 @@
 
 .configuration-input {
   min-width: 280px;
+}
+
+.copy-button {
   padding-right: 20px;
 }
+
+.copy {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 2em;
+  height: 2em;
+  padding: 0;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  background: transparent;
+  display: none;
+}
+
