resolves #509 bot admin: add builtin stories
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/story/answer.component.css
+++ b/bot/admin/web/src/app/bot/story/answer.component.css
@@ -10,8 +10,15 @@
   margin-right: 5px;
 }
 
+.simple-container {
+  float:right;
+}
+
 .simple {
   font-size: small;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .answer-container {
