fixes #514 bot admin: do not display logout button in sso mode
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot-admin-app.component.html
+++ b/bot/admin/web/src/app/bot-admin-app.component.html
@@ -56,7 +56,7 @@
                  [value]="l">{{ state.localeName(l) }}</mat-option>
     </mat-select>
 
-    <button *ngIf="auth.isLoggedIn()" class="tock-icon-button" (click)="auth.logout()" matTooltip="Logout">
+    <button *ngIf="auth.isLoggedIn() && !auth.isSSO()" class="tock-icon-button" (click)="auth.logout()" matTooltip="Logout">
       <i class="material-icons tock-toolbar-menu">exit_to_app</i>
     </button>
 
